--- a/MyGraphqlDomain/MyGraphqlDomain.csproj
+++ b/MyGraphqlDomain/MyGraphqlDomain.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
-    <Nullable>true</Nullable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
