--- a/MyGraphqlBackend/MyGraphqlBackend.csproj
+++ b/MyGraphqlBackend/MyGraphqlBackend.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.5" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+    <PackageReference Include="Xabe.FFMpeg" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
