add migrations. add graphql specific code and modified the startup file to this effect

--- a/MyGraphqlBackend/appsettings.json
+++ b/MyGraphqlBackend/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Connections": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=appdb;User Id=postgres;Password=testpassword" 
   },
   "Logging": {
