--- a/MyGraphqlBackend/appsettings.json
+++ b/MyGraphqlBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=appdb;User Id=postgres;Password=testpassword" 
+    "DefaultConnection": "Server=localhost;Port=5432;Database=mygqldb;User Id=postgres;Password=testpass" 
   },
   "Logging": {
     "LogLevel": {
